WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251987
(REGRESSION
255300@main
) Transparent outlines not rendered around all elements
https://bugs.webkit.org/show_bug.cgi?id=251987
Summary
(REGRESSION 255300@main) Transparent outlines not rendered around all elements
Remko Tronçon
Reported
2023-02-09 05:42:25 PST
I have the following piece of HTML: <div> <div style="outline: 3px dashed rgba(1, 5, 57, 0.376471)">Foo</div> <div style="outline: 3px dashed rgba(1, 5, 57, 0.376471)">Bar</div> </div> <div style="outline: 3px dashed rgba(1, 5, 57, 0.376471)">Baz</div> - When I load this in Safari on iOS, only the first item has an outline - If I remove the alpha component from the first style, all outlines render - If I change the 'dashed' in the first style to 'solid', only the 2 first outlines render (not the third) There are other tweaks that you can do to get unexpected behavior, but the 2 above should hopefully pinpoint the problem. I was also able to reproduce this in a simulator.
Attachments
Test case
(422 bytes, text/html)
2023-02-13 15:35 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(6.30 KB, patch)
2023-03-21 12:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.30 KB, patch)
2023-03-21 20:06 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-02-13 15:35:33 PST
Created
attachment 464976
[details]
Test case
Simon Fraser (smfr)
Comment 2
2023-02-13 15:35:56 PST
Matt, this sounds a bit like your GraphicsContext state bug.
Radar WebKit Bug Importer
Comment 3
2023-02-16 05:43:16 PST
<
rdar://problem/105545310
>
alan
Comment 4
2023-03-21 12:54:09 PDT
Created
attachment 465542
[details]
Patch
alan
Comment 5
2023-03-21 20:06:39 PDT
Created
attachment 465543
[details]
Patch
EWS
Comment 6
2023-03-22 06:37:46 PDT
Committed
261962@main
(bb3ba56cc5da): <
https://commits.webkit.org/261962@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465543
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug