Cherry-pick bb3ba56cc5da. rdar://problem/105545310

(REGRESSION 255300@main) Transparent outlines not rendered around all elements
    https://bugs.webkit.org/show_bug.cgi?id=251987
    <rdar://problem/105545310>

    Reviewed by Simon Fraser.

    Compute haveAllSolidEdges in paintOutline the same way we compute it for border painting.
    (Move "haveAllSolidEdges" logic to a static helper to be able to share it between these 2 decoration painter functions)

    * LayoutTests/fast/block/transparent-outline-with-and-without-border-radius-expected.html: Added.
    * LayoutTests/fast/block/transparent-outline-with-and-without-border-radius.html: Added.
    * Source/WebCore/rendering/BorderPainter.cpp:
    (WebCore::BorderPainter::paintOutline):

    Canonical link: https://commits.webkit.org/261962@main

Identifier: 259548.472@safari-7615-branch